--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>AniSphere</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
