--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,13 +5,17 @@
     <title>AniSphere</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <script
+      src="https://kit.fontawesome.com/5b9836108c.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
-    />
+    /> -->
   </head>
   <body>
     <div id="root"></div>
