--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -16,8 +16,31 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     /> -->
+    <link rel="stylesheet" href="mainbody.css" />
   </head>
   <body>
+    <div class="cursor"></div>
+    <script type="text/javascript">
+      const cursor = document.querySelector(".cursor");
+      let timeout;
+
+      document.addEventListener("mousemove", (e) => {
+        let x = e.pageX;
+        let y = e.pageY;
+
+        cursor.style.top = y + "px";
+        cursor.style.left = x + "px";
+        cursor.style.display = "block";
+
+        function mouseStopped() {
+          cursor.style.display = "none";
+        }
+        timeout = setTimeout(mouseStopped, 1500);
+      });
+      document.addEventListener("mouseout", () => {
+        cursor.style.display = "none";
+      });
+    </script>
     <div id="root"></div>
   </body>
 </html>
