--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -18,29 +18,12 @@
     /> -->
     <link rel="stylesheet" href="mainbody.css" />
   </head>
+
   <body>
-    <div class="cursor"></div>
-    <script type="text/javascript">
-      const cursor = document.querySelector(".cursor");
-      let timeout;
-
-      document.addEventListener("mousemove", (e) => {
-        let x = e.pageX;
-        let y = e.pageY;
-
-        cursor.style.top = y + "px";
-        cursor.style.left = x + "px";
-        cursor.style.display = "block";
-
-        function mouseStopped() {
-          cursor.style.display = "none";
-        }
-        timeout = setTimeout(mouseStopped, 1500);
-      });
-      document.addEventListener("mouseout", () => {
-        cursor.style.display = "none";
-      });
-    </script>
+    <!-- <div class="cursor site-wide">
+      <div class="pointer"></div>
+    </div> -->
+    <script src="main.js"></script>
     <div id="root"></div>
   </body>
 </html>
