i hate this app

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -23,7 +23,7 @@
     <!-- <div class="cursor site-wide">
       <div class="pointer"></div>
     </div> -->
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     <div id="root"></div>
   </body>
 </html>
