--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     /> -->
-    <link rel="stylesheet" href="mainbody.css" />
+    <!-- <link rel="stylesheet" href="mainbody.css" /> -->
   </head>
 
   <body>
