this multiple select is no Joke

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/5b9836108c.js"
       crossorigin="anonymous"
     ></script>
+    <script src="multiselect-dropdown.js"></script>
     <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
