--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -18,6 +18,20 @@
       crossorigin="anonymous"
     /> -->
     <!-- <link rel="stylesheet" href="mainbody.css" /> -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-ZRKKL4QMRM"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-ZRKKL4QMRM");
+    </script>
   </head>
 
   <body>
