--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -19,7 +19,7 @@
     /> -->
     <!-- <link rel="stylesheet" href="mainbody.css" /> -->
     <!-- Google tag (gtag.js) -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-ZRKKL4QMRM"
     ></script>
@@ -31,7 +31,7 @@
       gtag("js", new Date());
 
       gtag("config", "G-ZRKKL4QMRM");
-    </script>
+    </script> -->
   </head>
 
   <body>
